--- a/src/options.html
+++ b/src/options.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="lib/slick.grid.css">
 	<link rel="stylesheet" type="text/css" href="lib/ui-toggle.css">
 	
-	<title>Ad Close Gold - Options</title>
+	<title>Tab Close Gold - Options</title>
 </head>
 <body>
 
@@ -23,7 +23,7 @@
 <div id="main" class="center">
 	<div id="header">
 		<img src="icon128.png" height="64" width="64" class="floatLeft" alt="Gold Team Rules!"/>
-		<span id="title">Ad Close Gold - Options</span>
+		<span id="title">Tab Close Gold - Options</span>
 	</div>
 	<div class="floatLeft">
 		<b style="font-size: 18px; padding-left: 3px; top: 2px; position: relative;">*</b>
