--- a/src/popup.html
+++ b/src/popup.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <title>Tab Close Gold - Popup</title>
@@ -53,8 +53,8 @@ body {
   </ul>
 </nav>
 <!--leave scripts in the body-->
-<script src="lib/jquery-1.7.min.js"></script>
-<script src="lib/lz-string.min.js"></script> 
-<script src="popup.js"></script>
+<script src="./lib/jquery-1.7.min.js"></script>
+<script src="./lib/lz-string.min.js"></script> 
+<script src="./popup.bundle.js"></script>
 </body>
 </html> 
