implement logger functionality

--- a/src/options.html
+++ b/src/options.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="options.css">
-	<link rel="stylesheet" type="text/css" href="lib/examples.css">
+	<link rel="stylesheet" type="text/css" href="lib/slick-default-theme.css">
 	<link rel="stylesheet" type="text/css" href="lib/slick.grid.css">
 	<script src="options.bundle.js"></script>
 	<title>Tab Close Gold - Options</title>
