context menu progress

--- a/src/options.html
+++ b/src/options.html
@@ -9,20 +9,20 @@
 <body>
 	<div id="main" class="center">
 		<div id="header">
-			<img src="icon128.png" height="64" width="64" class="floatLeft" alt="Gold Team Rules!" />
+			<img src="icon128.png" height="64" width="64" class="float-left" alt="Gold Team Rules!" />
 			<span id="title">Tab Close Gold - Options</span>
 		</div>
-		<div class="floatLeft">
+		<div class="float-left">
 			<b style="font-size: 18px; padding-left: 3px; top: 2px; position: relative;">*</b>
 			<span class="select-none"> = wild card. Example: </span><span>www.face*.com</span>
 		</div>
-		<div class="floatRight">
+		<div class="float-right">
 			<input type="button" value="Delete All URLs" id="delete-all-button" style="margin-bottom: 7px;" />
 		</div>
 		<div id="body">
 		</div>
 		<div id="footer">
-			<div class="floatLeft">
+			<div class="float-left">
 				<div class="flex-container" style="display: none;" id="super-secret-admin-panel">
 					<!-- Lets hide the storage switcher for now. Maybe we can expose it to users later down the road -->
 					<span class="flex-item" style="padding-top: 5px; padding-right: 5px;">Options Storage: </span>
@@ -40,16 +40,16 @@
 				</div>
 			</div>
 			<div style="clear:both;" />
-			<button id="show-logs-button" class="floatRight">Logs</button>
+			<button id="show-logs-button" class="float-right">Logs</button>
 		</div>
 		<div id="configFooter">
 			<textarea id="configTextArea" style="resize: vertical; width: 100%; margin-bottom: 10px;" rows="5"
 				autocomplete="off" placeholder="Export will be shown here.
 Import will read from here."></textarea>
 			<input type="button" value="Export Configuration" id="exportConfig" style="height: 30px;"
-				class="floatLeft" />
+				class="float-left" />
 			<input type="button" value="Import Additional Configuration" id="importConfig" style="height: 30px;"
-				class="floatRight" />
+				class="float-right" />
 			<div style="clear:both;" />
 		</div>
 	</div>
