--- a/src/popup.html
+++ b/src/popup.html
@@ -45,6 +45,8 @@
 
     body {
       width: 200px;
+      font-family: Arial, sans-serif !important;
+      font-size: 14px;
     }
   </style>
 </head>
