update readme + final tweaks

--- a/src/options.html
+++ b/src/options.html
@@ -14,7 +14,7 @@
 			<img src="icon128.png" height="64" width="64" class="float-left" alt="Gold Team Rules!" />
 			<span id="title">Tab Close Gold - Options</span>
 		</div>
-		<div class="float-left">
+		<div class="float-left" style="padding-bottom: 2px;">
 			<b style="font-size: 18px; padding-left: 3px; top: 2px; position: relative;">*</b>
 			<span class="select-none"> = wild card. Example: </span><span>face*.com</span>
 		</div>
