implement dark mode

--- a/src/options.html
+++ b/src/options.html
@@ -46,10 +46,8 @@
 			<textarea id="configTextArea" style="resize: vertical; width: 100%; margin-bottom: 10px;" rows="5"
 				autocomplete="off" placeholder="Export will be shown here.
 Import will read from here."></textarea>
-			<input type="button" value="Export Configuration" id="exportConfig" style="height: 30px;"
-				class="float-left" />
-			<input type="button" value="Import Additional Configuration" id="importConfig" style="height: 30px;"
-				class="float-right" />
+			<button id="exportConfig" style="height: 30px;" class="float-left">Export Configuration</button>
+			<button id="importConfig" style="height: 30px;" class="float-right">Import Additional Configuration</button>
 			<div style="clear:both;"></div>
 		</div>
 	</div>
