--- a/src/popup.html
+++ b/src/popup.html
@@ -33,10 +33,11 @@
     li {
       border-style: solid;
       border-width: 1px;
+      border-bottom: 0;
     }
 
-    li:first-child {
-      border-bottom: 0;
+    li:last-child {
+      border-bottom: 1px solid black;
     }
 
     .navigation {
@@ -48,6 +49,11 @@
       font-family: Arial, sans-serif !important;
       font-size: 14px;
     }
+
+    #pause > img {
+      float: right; 
+      margin-top: -1px;
+    }
   </style>
 </head>
 <body>
@@ -55,6 +61,12 @@
     <ul class="menu">
       <li><span id="blacklist">Blacklist current site</span></li>
       <li><span id="options">Options</span></li>
+      <li>
+        <span id="pause" title="Click to pause for 5 min.">&shy;
+          <img id="enabled-icon" src="images/tick.png" style="display: none;">
+          <img id="paused-icon" src="images/pause.png" style="display: none;">
+        </span>
+      </li>
     </ul>
   </nav>
   <!--leave scripts in the body-->
