handle browser shutdown while paused

--- a/src/options.html
+++ b/src/options.html
@@ -23,7 +23,7 @@
 		<div id="footer">
 			<div class="float-left">
 				<div class="flex-container" style="display: none;" id="super-secret-admin-panel">
-					<!-- We use local storage for logs so we can't allow people to switch between local and cloud storage for now -->
+					<!-- We use local storage for logs and extension pausing capabilities so we can't allow people to switch between local and cloud storage for now -->
 					<span class="flex-item" style="padding-right: 5px;">Options Storage: </span>
 					<select id="storage-dropdown" class="flex-item" name="storage_option">
 						<option value="Cloud">Cloud</option>
